--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ header {
 }
 
     .bottom-info h2 {
-        font-size: 6rem;
+        font-size: 4rem;
         margin-bottom: 30px;
     }
     .bottom-info p {
@@ -113,7 +113,7 @@ header {
         margin-bottom: 100px;
     }
     .contact p {
-        font-size: 3rem;
+        font-size: 2rem;
         font-weight: lighter;
     }
     .contact .fa {
